Implemented accounts. -Login views -Signup views -Pending and completed status

--- a/toDo/static/css/style.css
+++ b/toDo/static/css/style.css
@@ -14,8 +14,8 @@ body {
 }
 /* super basic grid structure */
 .container {
-    width: 600px;
-    margin: 0 auto;
+    width: 1000px;
+    margin: 200px auto;
     background: #ffffff;
     padding: 20px 0;
     -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
@@ -37,7 +37,7 @@ body {
     background: #fff;
 }
 /* logo */
-h1 {
+.taskCont h1 {
     font-family: 'Rokkitt', sans-serif;
     color: #666;
     text-align: center;
@@ -67,7 +67,7 @@ h1 {
 .inputContainer.half.last.right {
     border-left: 1px solid #efefef;
 }
-input[type="date"], input[type="text"], select {
+.taskCont input[type="date"], .taskCont input[type="text"], .taskCont select {
     height: 100%;
     width: 100%;
     padding: 0 20px;
@@ -86,39 +86,39 @@ input[type="date"], input[type="text"], select {
     -webkit-transition: background 0.3s;
             transition: background 0.3s;
 }
-input[type="date"] {
+.taskCont input[type="date"] {
     cursor: pointer;
 }
-input[type="date"]:focus, input[type="text"]:focus, select:focus {
+.taskCont input[type="date"]:focus, .taskCont input[type="text"]:focus, .taskCont select:focus {
     outline: none;
     background: #ecf0f1;
 }
-::-webkit-input-placeholder {
+.taskCont ::-webkit-input-placeholder {
     color: lightgrey;
     font-weight: normal;
     -webkit-transition: all 0.3s;
             transition: all 0.3s;
 }
-::-moz-placeholder {
+.taskCont ::-moz-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
-::-ms-input-placeholder {
+.taskCont ::-ms-input-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
-input:-moz-placeholder {
+.taskCont input:-moz-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
-input:focus::-webkit-input-placeholder {
+.taskCont input:focus::-webkit-input-placeholder {
     color: #95a5a6;
     font-weight: bold;
 }
-input:focus::-moz-input-placeholder {
+.taskCont input:focus::-moz-input-placeholder {
     color: #95a5a6;
     font-weight: bold;
 }
@@ -131,9 +131,9 @@ input:focus::-moz-input-placeholder {
     display: block;
     position: absolute;
 }
-button {
+.taskCont button {
     font-family: 'Open Sans', sans-serif;
-    background: transparent;
+    //background: transparent;
     border-radius: 2px;
     border: none;
     outline: none;
@@ -168,6 +168,22 @@ button {
 .taskDelete:hover {
     background: #c0392b;
 }
+
+.taskReady{
+    background: forestgreen;
+}
+
+.taskReady:hover{
+    background: green;
+}
+
+.taskPending{
+    background: rgb(231, 231, 41);
+}
+
+.taskPending:hover{
+    background: yellow;
+}
 /* task styles */
 .taskList {
     list-style: none;
@@ -188,8 +204,13 @@ button {
     margin-right: 1em;
 }
 .complete-true {
-    text-decoration:  line-through;
-    color: #bebebe;
+    margin-left: 40px;
+    color: #16a085;
+}
+
+.complete-false{
+    margin-left: 40px;
+    color: rgb(231, 231, 41);
 }
 .taskList .taskDate {
     color: #95a5a6;
@@ -236,14 +257,14 @@ button {
 .category-Other {
     background: #d35400;
 }
-footer {
+.taskCont footer {
     text-align: center;
     font-size: 11px;
     font-weight: 600;
     text-transform: uppercase;
     color: #777;
 }
-footer a {
+.taskCont footer a {
     color: #f39c12;
 }
 /* custom checkboxes */
@@ -275,6 +296,37 @@ footer a {
     content: '\f14a';
     color: #16a085;
 }
+
+.taskRadio{
+    -webkit-appearance: none;
+    appearance: none;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    display: inline-block;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+    border-radius: 50% !important;
+}
+
+.taskCheckbox:focus {
+    outline: none;
+}
+
+.taskRadio:before {
+    content: '\f096';
+}
+
+.taskRadio:checked:before{
+    content: '\f14a';
+    color: #16a085;
+}
+
+.align{
+    display: flex;￼
+    justify-content: center;
+}
 /* custom select menu */
 .taskCategory {
     -webkit-appearance: none;
@@ -297,4 +349,163 @@ footer a {
     border: none;
     outline: none;
     padding: 0 100px;
+}
+
+
+
+/*Menu*/
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700);
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-opener, .menu-opener:hover, .menu-opener.active, .menu-opener-inner, .menu-opener-inner::before, .menu-opener-inner::after, .menu, .menu.active {
+  -webkit-transition: 250ms all;
+  transition: 250ms all;
+}
+
+.menu-opener {
+  cursor: pointer;
+  height: 64px;
+  position: absolute;
+  top: 2%;
+  left: 1%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 64px;
+}
+.menu-opener:hover, .menu-opener.active {
+  background: #f1c40f;
+}
+
+.menu-opener-inner {
+  background: #fff;
+  height: .5rem;
+  margin-left: .75rem;
+  margin-top: 1.75rem;
+  width: 2.5rem;
+}
+.menu-opener-inner::before, .menu-opener-inner::after {
+  background: white;
+  content: '';
+  display: block;
+  height: .5rem;
+  width: 2.5rem;
+}
+.menu-opener-inner::before {
+  -webkit-transform: translateY(-0.75rem);
+  -ms-transform: translateY(-0.75rem);
+  transform: translateY(-0.75rem);
+}
+.menu-opener-inner::after {
+  -webkit-transform: translateY(0.25rem);
+  -ms-transform: translateY(0.25rem);
+  transform: translateY(0.25rem);
+}
+.menu-opener-inner.active {
+  background: transparent;
+}
+.menu-opener-inner.active::before {
+  -webkit-transform: translateY(0rem) rotate(-45deg);
+  -ms-transform: translateY(0rem) rotate(-45deg);
+  transform: translateY(0rem) rotate(-45deg);
+}
+.menu-opener-inner.active::after {
+  -webkit-transform: translateY(-0.5rem) translateX(0rem) rotate(45deg);
+  -ms-transform: translateY(-0.5rem) translateX(0rem) rotate(45deg);
+  transform: translateY(-0.5rem) translateX(0rem) rotate(45deg);
+}
+
+.menu {
+  background: #f1c40f;
+  color: transparent;
+  height: 64px;
+  position: absolute;
+  top: 2%;
+  left: 1%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 0rem;
+  z-index: -1;
+}
+.menu.active {
+  width: -webkit-calc(100% - 2rem);
+  width: calc(100% - 2rem);
+}
+.menu.active .menu-link {
+  color: white;
+}
+
+.menu-inner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  height: 100%;
+  list-style-type: none;
+  margin: 0;
+  margin-left: 4rem;
+  padding: 0;
+}
+
+.menu-link {
+  color: transparent;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  font-size: 2rem;
+  font-weight: 100;
+  height: 100%;
+  text-align: center;
+  text-decoration: none;
+}
+.menu-link li {
+  margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .menu {
+    height: auto;
+  }
+  .menu-inner {
+    display: block;
+  }
+  .menu-link {
+    padding: 10px 0;
+    font-size: 1.2em;
+  }
+  .menu.active {
+    width: -webkit-calc(100% - 0.5rem);
+    width: calc(100% - 0.5rem);
+  }
 }
