--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,51 @@
-<!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>TodoApp - Create A Todo With Django</title>
-  {% load static %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <div django-app="TaskManager">        
-    <div class="container">
+    <div class="taskCont container">
             <div class="content">
             <h1>TodoApp</h1>
-            <p class="tagline">a Django todo app</p>
+            <p class="tagline">App para anotar tus to-dos!</p>
+            <p class="tagline">Usuario: {{request.user.username}}</p>
             <form action="" method="post">
             {% csrf_token %} <!-- csrf token for basic security -->
                 <div class="inputContainer">
-                    <input type="text" id="description" class="taskName" placeholder="What do you need to do?" name="description" required>
-                    <label for="description">Description</label>
+                    <input type="text" id="description" class="taskName" placeholder="¿Qué necesitas hacer?" name="description" required>
+                    <label for="description">Descripción</label>
                 </div>
                 <div class="inputContainer half last">
                     <i class="fa fa-caret-down selectArrow"></i>
                     <select id="category" class="taskCategory" name="category_select">
-                    <option class="disabled" value="">Choose a category</option>
+                    <option class="disabled" value="">Escoge una categoría</option>
                     {% for category in categories %}
                         <option class="" value="{{ category.name }}" name="{{ category.name }}">{{ category.name }}</option>
                     {% endfor %}
                     </select>
-                    <label for="category">Category</label>
+                    <label for="category">Categoría</label>
                 </div>
                 <div class="inputContainer half last right">
                     <input type="date" id="dueDate" class="taskDate" name="date">
-                    <label for="dueDate">Due Date</label>
+                    <label for="dueDate">Fecha de realización</label>
                 </div>
                 <div class="row">
-                    <button class="taskAdd" name="taskAdd" type="submit"><i class="fa fa-plus icon"></i>Add task</button>
-                    <button class="taskDelete" name="taskDelete" formnovalidate="" type="submit" onclick="$('input#sublist').click();"><i class="fa fa-trash-o icon"></i>Delete Tasks</button>
+                    <button class="taskAdd" name="taskAdd" type="submit"><i class="fa fa-plus icon"></i>Añadir tarea</button>
+                    <button class="taskDelete" name="taskDelete" formnovalidate="" type="submit" onclick="$('input#sublist').click();"><i class="fa fa-trash-o icon"></i>Eliminar tareas</button>
+                    <button class="taskReady" name="taskReady" formnovalidate="" type="submit" onclick="$('input#sublist').click();"><i class="fa fa-check icon"></i>Marcar listo</button>
+                    <button class="taskPending" name="taskPending" formnovalidate="" type="submit" onclick="$('input#sublist').click();"><i class="fa fa-clock-o icon"></i>Marcar pendiente</button>
+
+
                 </div>
             <ul class="taskList">
             {% for todo in todos %} <!-- django template lang - for loop -->
                 <li class="taskItem">
+
                     <input type="checkbox" class="taskCheckbox" name="checkedbox" id="{{ todo.id }}" value="{{ todo.id }}">
                     <label for="{{ todo.id }}"><span class="complete-">{{ todo.title }}</span></label>
+                    {% if todo.status == 1 %}
+                        <label for="{{ todo.id }}"><span class="complete-false">Pendiente</span></label>
+                    {% else %}
+                        <label for="{{ todo.id }}"><span class="complete-true">Completada</span></label>
+                    {% endif %}
                     <span class="category-{{ todo.category }}">{{ todo.category }}</span>
                     <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.created }} - {{ todo.due_date }}</strong>
                 </li>
@@ -52,6 +55,4 @@
             </div><!-- content -->
  </div><!-- container -->
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</body>
-</html>
+{% endblock %}
